tests/baselines/reference/arrayFilterBooleanExternalOverload4.errors.txt
arrayFilterBooleanExternalOverload4.ts(15,40): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type '(i: 1) => 1' is not assignable to parameter of type '(u: 2) => 2'.
      Types of parameters 'i' and 'u' are incompatible.
        Type '2' is not assignable to type '1'.
arrayFilterBooleanExternalOverload4.ts(16,35): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type '(i: 1) => 1' is not assignable to parameter of type '(t: 2) => 2'.
      Types of parameters 'i' and 't' are incompatible.
        Type '2' is not assignable to type '1'.
arrayFilterBooleanExternalOverload4.ts(17,35): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type '(i: 1) => 1' is not assignable to parameter of type '(t: 2) => 2'.


==== arrayFilterBooleanExternalOverload4.ts (3 errors) ====
    // #56013
    
    interface F2<T extends number,U extends number> {
        (p1:(t:1)=>T,p2:(u:1)=>U):11;
        (p1:(t:1)=>T,p2:(u:U)=>U):19;
        (p1:(t:T)=>T,p2:(u:1)=>U):91;
        (p1:(t:T)=>T,p2:(u:U)=>U):99;
    }
    type ID = <I>() => (i:I) => I;
    
    declare const id: ID;
    
    
    const t11 = (0 as any as F2<1,1>)(id(),id());
    const t12 = (0 as any as F2<1,2>)(id(),id());
                                           ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Argument of type '(i: 1) => 1' is not assignable to parameter of type '(u: 2) => 2'.
!!! error TS2769:       Types of parameters 'i' and 'u' are incompatible.
!!! error TS2769:         Type '2' is not assignable to type '1'.
!!! related TS2771 arrayFilterBooleanExternalOverload4.ts:7:5: The last overload is declared here.
    const t21 = (0 as any as F2<2,1>)(id(),id());
                                      ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Argument of type '(i: 1) => 1' is not assignable to parameter of type '(t: 2) => 2'.
!!! error TS2769:       Types of parameters 'i' and 't' are incompatible.
!!! error TS2769:         Type '2' is not assignable to type '1'.
!!! related TS2771 arrayFilterBooleanExternalOverload4.ts:7:5: The last overload is declared here.
    const t22 = (0 as any as F2<2,2>)(id(),id());
                                      ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Argument of type '(i: 1) => 1' is not assignable to parameter of type '(t: 2) => 2'.
!!! related TS2771 arrayFilterBooleanExternalOverload4.ts:7:5: The last overload is declared here.
    
    t11 satisfies 11;
    t12 satisfies 19;
    t21 satisfies 91;
    t22 satisfies 99;
    
    